# OpenGL-Basics

./: .gitignore  CMakeLists.txt  README.md
project/: project
project/Shaders/: shader.fragt  shader.vert
project/include/: Camera.h  Light.h  Material.h  Mesh.h  Shader.h  Texture.h  Window.h
project/src/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
